Fixed whitespace issue in input field

--- a/css/app.css
+++ b/css/app.css
@@ -124,7 +124,7 @@ body {
   overflow-y: scroll;
   padding: 12px 12px 12px 52px;
   resize: none;
-  white-space: nowrap;
+  white-space: pre;
 }
 
 .input-footer,
